// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAlignedDiffs lines change preceding and following common 1`] = `
"<red>- <inverse>delete</></>
+ <inverse>insert</></>
<dim>  common between changes</>
<red>- <inverse>prev</></>
+ <inverse>next</></>"
`;

exports[`getAlignedDiffs lines common at end when both current change lines are empty 1`] = `
"<red>- <inverse>delete</></>
<dim>  common at end</>"
`;

exports[`getAlignedDiffs lines common between delete and insert 1`] = `
"<red>- <inverse>delete</></>
<dim>  common between changes</>
+ <inverse>insert</></>"
`;

exports[`getAlignedDiffs lines common between insert and delete 1`] = `
"+ <inverse>insert</></>
<dim>  common between changes</>
<red>- <inverse>delete</></>"
`;

exports[`getAlignedDiffs lines common preceding and following change 1`] = `
"<dim>  common preceding</>
<red>- <inverse>delete</></>
+ <inverse>insert</></>
<dim>  common following</>"
`;

exports[`getAlignedDiffs newline change from space 1`] = `
"<red>- preceding<inverse> </>following</>
+ preceding</>
+ following</>"
`;

exports[`getAlignedDiffs newline change to space 1`] = `
"<red>- preceding</>
<red>- following</>
+ preceding<inverse> </>following</>"
`;

exports[`getAlignedDiffs newline delete only 1`] = `
"<red>- preceding</>
<red>- following</>
+ precedingfollowing</>"
`;

exports[`getAlignedDiffs newline delete with adjacent change 1`] = `
"<red>- preced<inverse>ing</></>
<red>- following</>
+ preced<inverse>ed</>following</>"
`;

exports[`getAlignedDiffs newline insert only 1`] = `
"<red>- precedingfollowing</>
+ preceding</>
+ following</>"
`;

exports[`getAlignedDiffs newline insert with adjacent changes 1`] = `
"<red>- preced<inverse>edf</>ollowing</>
+ preced<inverse>ing</></>
+ <inverse>F</>ollowing</>"
`;

exports[`getAlignedDiffs strings change at start and delete or insert at end 1`] = `
"<red>- <inverse>prev</> change common<inverse> delete</></>
+ <inverse>next</> change common</>
<dim>  unchanged</>
<red>- <inverse>expect</>ed change common</>
+ <inverse>receiv</>ed change common<inverse> insert</></>"
`;

exports[`getAlignedDiffs strings delete or insert at start and change at end 1`] = `
"<red>- common change <inverse>prev</></>
+ <inverse>insert </>common change <inverse>next</></>
<dim>  unchanged</>
<red>- <inverse>delete </>common change th<inverse>is</></>
+ common change th<inverse>at</></>"
`;

exports[`getAlignedDiffs substrings first common when both current change lines are empty 1`] = `
"+ <inverse>insert</></>
<dim>  first</>
<dim>  middle</>
<red>- last <inverse>prev</></>
+ last <inverse>next</></>"
`;

exports[`getAlignedDiffs substrings first common when either current change line is non-empty 1`] = `
"<red>- <inverse>expected </>first</>
+ first</>

<dim>  last</>"
`;

exports[`getAlignedDiffs substrings first delete completes the current line 1`] = `
"<red>- common preceding <inverse>first</></>
<red>- <inverse>middle</></>
<red>- <inverse>last </>and following</>
+ common preceding and following</>"
`;

exports[`getAlignedDiffs substrings first insert completes the current line 1`] = `
"<red>- common preceding</>
+ common preceding<inverse> first</></>
+ <inverse>middle</></>
+</>"
`;

exports[`getAlignedDiffs substrings last is empty in delete at end 1`] = `
"<red>- common string preceding <inverse>prev</></>
<red>-</>
+ common string preceding <inverse>next</></>"
`;

exports[`getAlignedDiffs substrings last is empty in insert at end 1`] = `
"<red>- common string preceding <inverse>prev</></>
+ common string preceding <inverse>next</></>
+</>"
`;

exports[`getAlignedDiffs substrings last is non-empty in common not at end 1`] = `
"<dim>  common first</>
<red>- last <inverse>expect</>ed</>
+ last <inverse>receiv</>ed</>"
`;

exports[`getAlignedDiffs substrings middle is empty in delete between common 1`] = `
"<red>- common at start precedes <inverse>delete</></>
<red>-</>
<red>- <inverse>expect</>ed common at end</>
+ common at start precedes <inverse>receiv</>ed common at end</>"
`;

exports[`getAlignedDiffs substrings middle is empty in insert at start 1`] = `
"<red>- <inverse>expect</>ed common at end</>
+ <inverse>insert line</></>
+</>
+ <inverse>receiv</>ed common at end</>"
`;

exports[`getAlignedDiffs substrings middle is non-empty in delete at end 1`] = `
"<red>- common at start precedes <inverse>delete</></>
<red>- <inverse>non-empty line</></>
<red>- <inverse>next</></>
+ common at start precedes <inverse>prev</></>"
`;

exports[`getAlignedDiffs substrings middle is non-empty in insert between common 1`] = `
"<red>- common at start precedes <inverse>delete expect</>ed</>
+ common at start precedes <inverse>insert</></>
+ <inverse>non-empty</></>
+ <inverse>receiv</>ed</>"
`;
